# rip-factory

./: README.md  pyproject.toml  series-namer.py
series_namer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
